<resources>
    <string name="app_name">UNE 2024</string>
    <string name="app_registry">Registros</string>
    <string name="app_meter">Contadores</string>
    <string name="app_settings">Ajustes</string>

    <string name="last_read">Lectura anterior</string>
    <string name="read">Lectura actual</string>
    <string name="consume">Consumo:</string>
    <string name="total_pay">A pagar:</string>

    <string name="title_range">Rango (Cons.)</string>
    <string name="title_consume_kwh">Consumo (kWh)</string>
    <string name="title_amount">Importe (Pesos)</string>
    <string name="title_price">Precio (Pesos)</string>

    <string name="read_gt">La lectura actual debe ser mayor que la última lectura</string>
    <string name="read_all">Llene todos los campos</string>

    <string name="_0_cup">0 CUP</string>
    <string name="_0_kwh">0 kWh</string>

    <string name="calculate">Calcular</string>

    <!-- MENU -->
    <string name="mnu_about">Acerca de…</string>
    <string name="mnu_auth_bandec">Autenticar BANDEC</string>
    <string name="mnu_auth_bm">Autenticar BM</string>
    <string name="mnu_auth_bpa">Autenticar BPA</string>
    <string name="mnu_export">Exportar datos</string>
    <string name="mnu_import">Importar datos</string>
    <string name="mnu_meter">Contadores</string>
    <string name="mnu_dark_mode">Modo oscuro</string>
    <string name="mnu_pay">Pagar factura de electricidad</string>
    <string name="mnu_registry">Registros</string>
    <string name="mnu_spend">¿Cuánto puedo gastar?</string>
    <string name="mnu_settings">Ajustes</string>

    <string name="consume_kwh">%1$d kWh</string>
    <string name="amount_cup">%1$s CUP</string>

    <string name="no_result">Sin registros</string>
    <string name="registry_interval">Lectura: %1$d - %2$d kWh</string>
    <string name="consume_interval">Consumo: %1$d kWh</string>
    <string name="amount_interval">Importe: %1$s CUP</string>

    <string-array name="header_table">
        <item>@string/title_range</item>
        <item>@string/title_consume_kwh</item>
        <item>@string/title_price</item>
        <item>@string/title_amount</item>
    </string-array>

    <string-array name="ranges">
        <item>0 – 100</item>
        <item>101 – 150</item>
        <item>151 – 200</item>
        <item>201 – 250</item>
        <item>251 – 300</item>
        <item>301 – 350</item>
        <item>351 – 400</item>
        <item>401 – 450</item>
        <item>451 – 500</item>
        <item>501 – 600</item>
        <item>601 – 700</item>
        <item>701 – 1000</item>
        <item>1001 – 1800</item>
        <item>1801 – 2600</item>
        <item>2601 – 3400</item>
        <item>3401 – 4200</item>
        <item>4201 – 5000</item>
        <item>Más de 5000</item>
    </string-array>

    <!-- DIALOG ABOUT -->
    <string name="about">Acerca de…</string>
    <string name="sub_about">Si te ha gustado o resultado útil esta aplicación no olvides compartirla y dejarnos un comentario en el grupo.</string>
    <string name="develop">Desarrollador</string>
    <string name="sub_develop">Ing. Jesús Carrasco</string>
    <string name="our_portfolio">OUR PORTFOLIO</string>
    <string name="our_telegram">Telegram</string>

    <!-- DIALOG DELETE REG -->
    <string name="delete_reg">Eliminar registro</string>
    <string name="delete_question">¿Desea eliminar un registro oficial? Esta acción no se puede deshacer.</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>

    <!-- DIALOG CAN PAY -->
    <string name="money_allowed">Dinero disponible</string>
    <string name="more_5000">Ud. puede consumir más de 5000 kWh</string>
    <string name="minus_5000">Ud. puede consumir %1$d kWh</string>

    <string name="about1">Nuestra aplicación te permite calcular el importe a pagar según el consumo de kilovatios hora (kWh) de tu vivienda. Además, podrás llevar un registro detallado de todas las lecturas de consumo, lo que te ayudará a monitorear tu uso de energía a lo largo del tiempo.

Una característica destacada de nuestra aplicación es la capacidad de guardar la información de tus medidores de electricidad, lo que facilita el seguimiento de múltiples contadores en diferentes ubicaciones, como tu hogar, lugar de trabajo o cualquier otra propiedad.

No solo podrás registrar tus lecturas de consumo, sino que también te ofrecemos la posibilidad de pagar tus facturas directamente desde la aplicación, lo que te ahorra tiempo y simplifica la gestión de tus pagos de servicios.

Además, hemos integrado funciones de exportación e importación de datos para que puedas realizar copias de seguridad de tus registros de lectura y de los detalles de tus medidores. Esta funcionalidad te brinda tranquilidad al garantizar que tus datos estén seguros y accesibles en todo momento.

Con nuestra aplicación, tomar el control de tu consumo eléctrico y gestionar tus facturas nunca ha sido tan fácil. ¡Descarga nuestra aplicación ahora y empieza a ahorrar energía y dinero hoy mismo!</string>

    <string name="meter_id">Contador ID</string>
    <string name="meter_name">Propietario o identificador</string>
    <string name="add">Añadir</string>

    <string name="body_email">\n\n-----------------------------\nPor favor, no elimine esta información\nSistema Operativo: Android %1$s\nVersión de la aplicación: %2$s\nMarca de fábrica: %3$s\nModelo del dispositivo: %4$s\nFabricante: %5$s</string>
    <string name="version">Versión: %1$s</string>

    <string name="backup_complete">Datos restaurados correctamente</string>

    <string name="feedback_question">¿Tienes alguna inquietud? ¡Estamos encantados de ayudarle!</string>
    <string name="send_comments">Enviar comentarios</string>

    <string name="text_copied">Texto copiado al portapapeles</string>

</resources>