<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnu_registry"
        android:icon="@drawable/ic_registry"
        android:title="@string/mnu_registry"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnu_spend"
        android:icon="@drawable/ic_spend"
        android:title="@string/mnu_spend"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnu_meter"
        android:icon="@drawable/ic_meter"
        android:title="@string/mnu_meter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnu_dark_mode"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/mnu_dark_mode"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnu_settings"
        android:title="@string/mnu_settings"
        app:showAsAction="never" />
</menu>