<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnu_spend"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <TextView
        android:id="@+id/tvSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_consume_kwh"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/money"
            android:layout_width="200dp"
            android:layout_height="?attr/actionBarSize"
            android:ems="10"
            android:hint="@string/money_allowed"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

</LinearLayout>